Fixed: horizontal overflow

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 body {
     font-family: var(--font);
     margin: 0px;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
 }
 
